--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/jonathanpperry/reddit-react-app#readme",
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
@@ -32,7 +33,11 @@
     "@mikro-orm/core": "^4.3.2",
     "@mikro-orm/migrations": "^4.3.2",
     "@mikro-orm/postgresql": "^4.3.2",
-    "pg": "^8.5.1"
+    "apollo-server-express": "^2.19.0",
+    "express": "^4.17.1",
+    "graphql": "^15.4.0",
+    "pg": "^8.5.1",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
