--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-chakra-ui",
+  "name": "reddit-react-app",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
     "next": "latest",
     "react": "^17.0.1",
