--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts",
-    "create:migration": "mikro-orm migration:create"
+    "dev2": "nodemon --exec ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -36,10 +35,6 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.3.2",
-    "@mikro-orm/core": "^4.3.2",
-    "@mikro-orm/migrations": "^4.3.2",
-    "@mikro-orm/postgresql": "^4.3.2",
     "@types/nodemailer": "^6.4.0",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
@@ -55,12 +50,5 @@
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.29",
     "uuid": "^8.3.1"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
