--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -4,7 +4,7 @@
   "port": 5432,
   "username": "postgres",
   "password": "postgres",
-  "database": "lireddit3",
+  "database": "lireddit",
   "entities": ["dist/entities/*.js"],
-  "migrations": ["src/migrations/*.js"]
+  "migrations": ["dist/migrations/*.js"]
 }
