--- a/web/package.json
+++ b/web/package.json
@@ -19,10 +19,10 @@
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "latest",
+    "next": "^14.2.7",
     "next-urql": "^2.1.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-is": "^17.0.1",
     "urql": "^1.11.4"
   },
